force-app/main/default/objects/Program_Membership__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Program Memberships</relationshipLabel>
    <relationshipName>Program_Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>