force-app/main/default/objects/Program_Membership__c/fields/ApplicableStandards__c.field-meta.xml
<CustomField>
    <fullName>ApplicableStandards__c</fullName>
    <label>Applicable Standards</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>