force-app/main/default/objects/Program_Membership__c/fields/CertificateHolderType__c.field-meta.xml
<CustomField>
    <fullName>CertificateHolderType__c</fullName>
    <label>Certificate Holder Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Multi-Site</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>