force-app/main/default/objects/Program_Membership__c/fields/ClientStatus__c.field-meta.xml
<CustomField>
    <fullName>ClientStatus__c</fullName>
    <label>Client Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Transferred In</fullName>
            </value>
            <value>
                <fullName>Transferred Out</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>