force-app/main/default/objects/Program_Membership__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>End/Expiry Date</label>
    <type>Date</type>
</CustomField>