force-app/main/default/objects/Program_Membership__c/fields/FSC_LIC_Code__c.field-meta.xml
<CustomField>
    <fullName>FSC_LIC_Code__c</fullName>
    <description>FSC</description>
    <label>FSC LIC Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>