force-app/main/default/objects/Program_Membership__c/fields/License__c.field-meta.xml
<CustomField>
    <fullName>License__c</fullName>
    <label>License #</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>