force-app/main/default/objects/Program_Membership__c/fields/LicenseStatus__c.field-meta.xml
<CustomField>
    <fullName>LicenseStatus__c</fullName>
    <label>License Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Active Suspended</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Extended</fullName>
            </value>
            <value>
                <fullName>Initial</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Transferred</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>