force-app/main/default/objects/Program_Membership__c/fields/Membership_Number_ID__c.field-meta.xml
<CustomField>
    <fullName>Membership_Number_ID__c</fullName>
    <label>Membership Number/ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>