force-app/main/default/objects/Program_Membership__c/fields/Membership_Type__c.field-meta.xml
<CustomField>
    <fullName>Membership_Type__c</fullName>
    <label>Membership Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ASC Site Code</fullName>
            </value>
            <value>
                <fullName>BCP ID</fullName>
            </value>
            <value>
                <fullName>Bonsucro Membership Id</fullName>
            </value>
            <value>
                <fullName>Fairtrade Client ID</fullName>
            </value>
            <value>
                <fullName>FSC COC</fullName>
            </value>
            <value>
                <fullName>Global GAP Number (GGN)</fullName>
            </value>
            <value>
                <fullName>PalmTrace ID</fullName>
            </value>
            <value>
                <fullName>RA Id</fullName>
            </value>
            <value>
                <fullName>RSB Participant Code</fullName>
            </value>
            <value>
                <fullName>SMETA sedex id</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>