force-app/main/default/objects/Program_Membership__c/fields/Membership_Type_Note__c.field-meta.xml
<CustomField>
    <fullName>Membership_Type_Note__c</fullName>
    <label>Membership Type - Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>