force-app/main/default/objects/Program_Membership__c/fields/Membership_Type_Note_piclklist__c.field-meta.xml
<CustomField>
    <fullName>Membership_Type_Note_piclklist__c</fullName>
    <label>Membership Type Note</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Supply Chain Associate</fullName>
            </value>
            <value>
                <fullName>Ordinary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>