force-app/main/default/objects/Program_Membership__c/fields/Parent_Account_Text__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Text__c</fullName>
    <label>Parent Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>