force-app/main/default/objects/Program_Membership__c/fields/PEFC_RPP_Number__c.field-meta.xml
<CustomField>
    <fullName>PEFC_RPP_Number__c</fullName>
    <description>FSC</description>
    <label>PEFC / RPP Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>