force-app/main/default/objects/Program_Membership__c/fields/RSPOMembershipNumber__c.field-meta.xml
<CustomField>
    <fullName>RSPOMembershipNumber__c</fullName>
    <label>RSPO Membership Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>