force-app/main/default/objects/Program_Membership__c/fields/Scheme__c.field-meta.xml
<CustomField>
    <fullName>Scheme__c</fullName>
    <label>Scheme</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ISH</fullName>
            </value>
            <value>
                <fullName>NPP</fullName>
            </value>
            <value>
                <fullName>P&amp;C - POM</fullName>
            </value>
            <value>
                <fullName>SCC - Independent Mill</fullName>
            </value>
            <value>
                <fullName>SCC - Other</fullName>
            </value>
            <value>
                <fullName>SCC - PKC</fullName>
            </value>
            <value>
                <fullName>SCC - PKC/Refinery</fullName>
            </value>
            <value>
                <fullName>SCC - Port</fullName>
            </value>
            <value>
                <fullName>SCC - Product Man</fullName>
            </value>
            <value>
                <fullName>SCC - Refinery</fullName>
            </value>
            <value>
                <fullName>IFA</fullName>
            </value>
            <value>
                <fullName>IFA + HO</fullName>
            </value>
            <value>
                <fullName>IFA + CC</fullName>
            </value>
            <value>
                <fullName>HPSS</fullName>
            </value>
            <value>
                <fullName>PHA</fullName>
            </value>
            <value>
                <fullName>Spring</fullName>
            </value>
            <value>
                <fullName>GRASP</fullName>
            </value>
            <value>
                <fullName>FSMA</fullName>
            </value>
            <value>
                <fullName>TNM</fullName>
            </value>
            <value>
                <fullName>Costco</fullName>
            </value>
            <value>
                <fullName>QMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>