force-app/main/default/objects/Program_Membership__c/fields/SiteNameLocation__c.field-meta.xml
<CustomField>
    <fullName>SiteNameLocation__c</fullName>
    <label>Site Name/Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>