force-app/main/default/objects/Program_Membership__c/fields/Traceability__c.field-meta.xml
<CustomField>
    <fullName>Traceability__c</fullName>
    <label>Traceability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Identity Preserved</fullName>
            </value>
            <value>
                <fullName>Identity Preserved, Mass Balance</fullName>
            </value>
            <value>
                <fullName>IP &amp; MB</fullName>
            </value>
            <value>
                <fullName>IP &amp; MB &amp; S</fullName>
            </value>
            <value>
                <fullName>IP &amp; MB &amp; SG</fullName>
            </value>
            <value>
                <fullName>IP &amp; S</fullName>
            </value>
            <value>
                <fullName>IP &amp; SG</fullName>
            </value>
            <value>
                <fullName>Mass Balance</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>NA, Mass Balance</fullName>
            </value>
            <value>
                <fullName>Identity Preserved, Segregated, Mass Balance</fullName>
                <isActive>false</isActive>
                <label>Identity Preserved, Segregated, Mass Balance</label>
            </value>
            <value>
                <fullName>Identiy Preserved</fullName>
                <isActive>false</isActive>
                <label>Identiy Preserved</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>