force-app/main/default/objects/Program_Membership__c/fields/TrademarkLicenseNumber__c.field-meta.xml
<CustomField>
    <fullName>TrademarkLicenseNumber__c</fullName>
    <label>Trademark License Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>