force-app/main/default/objects/Program_Membership__c/fields/UoC_Code__c.field-meta.xml
<CustomField>
    <fullName>UoC_Code__c</fullName>
    <label>UoC Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>