force-app/main/default/objects/Program_Membership__c/recordTypes/FSC_COC.recordType-meta.xml
<RecordType>
    <fullName>FSC_COC</fullName>
    <active>true</active>
    <label>FSC COC</label>
</RecordType>