force-app/main/default/objects/Program_Membership__c/recordTypes/FT_USA.recordType-meta.xml
<RecordType>
    <fullName>FT_USA</fullName>
    <active>true</active>
    <label>Fair Trade USA</label>
</RecordType>