force-app/main/default/objects/Program_Membership__c/recordTypes/Rainforest_Alliance.recordType-meta.xml
<RecordType>
    <fullName>Rainforest_Alliance</fullName>
    <active>true</active>
    <label>Rainforest Alliance</label>
</RecordType>