force-app/main/default/objects/Program_Membership__c/recordTypes/RSPO.recordType-meta.xml
<RecordType>
    <fullName>RSPO</fullName>
    <active>true</active>
    <description>RSPO P&amp;C &amp; SupplyChain</description>
    <label>RSPO</label>
</RecordType>