force-app/main/default/objects/Program_Membership__c/recordTypes/SMETA.recordType-meta.xml
<RecordType>
    <fullName>SMETA</fullName>
    <active>true</active>
    <label>SMETA</label>
</RecordType>